Add scroll snapping behaviour to page
Move main and footer into holster element
Set page display to flex, height to 100vh
Set scroll snapping behaviour on sections
Add placeholder image

--- a/src/index.html
+++ b/src/index.html
@@ -2,42 +2,46 @@
   <head>
     <link href="/css/base.css" rel="stylesheet" />
     <link href="/css/layout.css" rel="stylesheet" />
+    <link href="/css/main.css" rel="stylesheet" />
     <link href="/css/nav.css" rel="stylesheet" />
   </head>
   <body>
     <header>
-      <img class="logo" />
+      <img class="logo" src="assets/placeholder.svg"/>
       <h1 class="title dark">Header Title</h1>
       <nav class="nav--primary">
 	<a class="active">one</a>
 	<a>two</a>
 	<a>three</a>
+	<a>four</a>
       </nav>
     </header>
-    <main>
-      <section class="section--hero dark">
-	<h1>Golfuture Sample</h1>
-      </section>
-      <section class="section--news">
-	<h1>News</h1>
-      </section>
-      <section class="section--feature dark">
-	<h1>Services</h1>
-      </section>
-      <section class="section--feature">
-	<h1>Events</h1>
-      </section>
-    </main>
-    <footer>
-      <p>
-	&copy; Golfuture 2022
-      </p>
-      <p>
-	This is a footer thing
-      </p>
-      <p>
-	<em>All information provided in this webzone is for the purpose of demonstration.</em>
-      </p>
-    </footer>
+    <div class="holster">
+      <main>
+	<section class="section--hero fullpage dark">
+	  <h1>Golfuture Sample</h1>
+	</section>
+	<section class="section--news">
+	  <h1>News</h1>
+	</section>
+	<section class="section--feature fullpage dark">
+	  <h1>Services</h1>
+	</section>
+	<section class="section--feature fullpage">
+	  <h1>Events</h1>
+	</section>
+      </main>
+      <footer>
+	<p>
+	  &copy; Golfuture 2022
+	</p>
+	<p>
+	  This is a footer thing
+	</p>
+	<p>
+	  <em>All information provided in this webzone is for the purpose of demonstration.</em>
+	</p>
+      </footer>
+    </div>
   </body>  
 </html>
