Add content to index
Add events items and styling
Add notifications/articles items
Add button styling
Add placeholder paragraph content
Add columns layout section

--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
   <head>
     <link href="/css/base.css" rel="stylesheet" />
@@ -20,15 +22,113 @@
       <main>
 	<section class="section--hero fullpage dark">
 	  <h1>Golfuture Sample</h1>
+	  <p>
+	    Here be a description, read all about it. Lorem ipsum dolor sit et bulbous megaphone de lorem upset. Lorem ipsum dolor sit et bulbous megaphone de lorem upset. Lorem ipsum dolor sit et bulbous megaphone de lorem upset.
+	  </p>
+	  <div class="page-links">
+	    <a href="#section-news">News</a>
+	    <a href="#section-services">Services</a>
+	    <a href="#section-events">Events</a>
+	  </div>
 	</section>
-	<section class="section--news">
+	<section id="section-news" class="section--news">
 	  <h1>News</h1>
+	  <div class="news-list">
+	    <article>
+	      <h3>Something Happened</h3>
+	      <p>Some article description or something, I don't know.</p>
+	      <a>Call to Action</a>
+	    </article>
+	    <article>
+	      <h3>An Announcement</h3>
+	      <p>Some article description or something, I don't know.</p>
+	      <a>Call to Action</a>
+	    </article>
+	    <article>
+	      <h3>Win Stupid Prizes</h3>
+	      <p>Some article description or something, I don't know.</p>
+	      <a>Call to Action</a>
+	    </article>
+	  </div>
 	</section>
-	<section class="section--feature fullpage dark">
+	<section id="section-services" class="section--feature fullpage dark">
 	  <h1>Services</h1>
+	  <div class="service-list">
+	    <article>
+	      <h3>Par 3</h3>
+	      <p>Some description be here! :)</p>
+	      <button class="button button-primary">Book Now</button>
+	    </article>
+	    <article>
+	      <h3>Smart Range</h3>
+	      <p>Your game doth sucketh.</p>
+	      <button class="button button-primary">Get good, son</button>
+	    </article>
+	  </div>
 	</section>
-	<section class="section--feature fullpage">
-	  <h1>Events</h1>
+	<section class="columns fullpage">
+	  <section id="section-hours" class="section--feature">
+	    <h1>Hours</h1>
+	    <p>
+	      Golfuture is always open! Always. Seriously. Our staff can't even leave. Send help.
+	    </p>
+	  </section>
+	  <section id="section-events" class="section--feature">
+	    <h1>Upcoming Events</h1>
+	    <ul class="event-list">
+	      <li>
+		<div class="event-list--header">
+		  <div>
+		    <h3>Monday</h3>
+		  </div>
+		  <div class="event-list--date">
+		    November 07
+		  </div>
+		</div>
+		<div class="event-list--content">
+		  <p>
+		    John? JOHN? I'm hungry, John!!! Make me fooooooood.
+		  </p>
+		</div>
+		<div class="event-list--footer">
+		  <a>Eat Lasagna</a>
+		</div>
+	      </li>
+	      <li>
+		<div class="event-list--header">
+		  <h3>Christmas in November</h3>
+		  <div class="event-list--date">
+		    November 25
+		  </div>
+		</div>
+		<div class="event-list--content">
+		  <p>
+		    The first day where it is socially acceptable to watch Hallmark Christmas movies.
+		  </p>
+		</div>
+		<div class="event-list--footer">
+		  <a>Deck the Halls</a>
+		</div>
+	      </li>
+	      <li>
+		<div class="event-list--header">
+		  <h3>December Fools</h3>
+		  <div class="event-list--date">
+		    December 1st
+		  </div>
+		</div>
+		<div class="event-list--content">
+		  <p>
+		    Join us for the elvish festival of seasonal shennanigans,
+		    celebrated by holliday harlequins the world over!
+		  </p>
+		</div>
+		<div class="event-list--footer">
+		  <a>Gift-Wrap your Coworker's Computer</a>
+		</div>
+	      </li>
+	    </ul>
+	  </section>
 	</section>
       </main>
       <footer>
